nginxweb/nginx-dep-A.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp-a
  name: nginx-a
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-a
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myapp-a
    spec:
      containers:
      - image: nginx:1.19.1
        imagePullPolicy: Always
        name: nginx-a
        command: [ 'nginx','-g','daemon off;' ]
        volumeMounts:
            - name: nginx-a
              mountPath: /usr/share/nginx/html/a
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/
              readOnly: true
      volumes:
      - name: nginx-a
        configMap:
          name: nginx-a
      - name: nginx-conf
        configMap:
          name: nginx-conf
