nginxweb/nginx-dep-B.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp-b
  name: nginx-b
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-b
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myapp-b
    spec:
      containers:
      - image: nginx:1.19.2
        imagePullPolicy: Always
        name: nginx-b
        command: [ 'nginx','-g','daemon off;' ]
        volumeMounts:
            - name: nginx-b
              mountPath: /usr/share/nginx/html/b
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/
              readOnly: true
      volumes:
      - name: nginx-b
        configMap:
          name: nginx-b
      - name: nginx-conf
        configMap:
          name: nginx-conf
