nginxweb/nginx-svc-b.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp-b
  name: myapp-b
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
  selector:
    app: myapp-b
